<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.meccaartwork.etsystats.QuickAccess">
  <RelativeLayout
    android:id="@+id/loadingPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:gravity="center" >

    <ProgressBar
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:indeterminate="true" />
  </RelativeLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" android:layout_marginTop="10dp"></LinearLayout>
  <android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/itemsSwiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ListView android:id="@+id/quickAccess"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
      ></ListView>
  </android.support.v4.widget.SwipeRefreshLayout>
  <include layout="@layout/empty_list"/>
  </LinearLayout>

</RelativeLayout>
