<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context="com.meccaartwork.etsystats.CategoryListings"
  tools:showIn="@layout/activity_category_listing">

  <ListView android:id="@+id/categoryListings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"></ListView>
  <include layout="@layout/empty_list"/>
</RelativeLayout>
